# serialport

./: CMakeLists.txt
src/: BaseDevice.cpp  BaseDevice.h  SerialPort.cpp  SerialPort.h  crosslib.h  main.cpp  qprange.cpp  qprange.h
